@@ -1,6 +1,11 @@
 Changes between 1.0.2 and '1.1.0b1'
 =====================================
 
+* fix issue48 and issue59: raise an Error if the module
+  from an imported test file does not seem to come from 
+  the filepath - avoids "same-name" confusion that has
+  been reported repeatedly
+
 * merged Ronny's nose-compatibility hacks: now
   nose-style setup_module() and setup() functions are 
   supported
